RavenDB-19882 Fix dropdown insidem modal overflow issue

--- a/src/Raven.Studio/wwwroot/Content/css/modals.less
+++ b/src/Raven.Studio/wwwroot/Content/css/modals.less
@@ -333,3 +333,7 @@
         padding: @gutter;
     }
 }
+
+.overflow-y-inherit {
+    overflow-y:inherit !important;
+}
